scode/Gmamcoders/prob20/error.txt
main.c: In function 'main':
main.c:23:1: error: expected declaration or statement at end of input
   23 | }
      | ^
